Hardcode landing page

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,3 +1,6 @@
+/ Not root_url which adds a trailing slash
+- content_for :canonical_url, "https://exercism.org"
+
 #page-landing
   %header.pt-24.sm:pt-32.md:pt-40.pb-56.sm:pb-56.c-header-with-bg
     .lg-container.flex.items-start.md:items-center.flex-col-reverse.md:flex-row
