Add canonical url for blog pages

--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -1,3 +1,4 @@
+- content_for :canonical_url, Exercism::Routes.blog_posts_url
 #page-blog
   %header.pt-16.pb-24.md:pb-16.mb-32.md:mb-48
     .lg-container.flex.flex-col.md:flex-row.items-center
