--- a/app/views/perks/index.html.haml
+++ b/app/views/perks/index.html.haml
@@ -1,3 +1,4 @@
+- content_for :canonical_url, Exercism::Routes.perks_url
 #page-partners
   %nav.c-header-with-bg.mb-32
     .lg-container.flex.mt-24.mb-24
