Add canonical url for mentoring

--- a/app/views/mentoring/external/show.html.haml
+++ b/app/views/mentoring/external/show.html.haml
@@ -1,3 +1,4 @@
+- content_for :canonical_url, Exercism::Routes.mentoring_url
 #mentor-external-page
   %section.top-section
     .lg-container.c-shapes
