--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -2,7 +2,7 @@
 %link{ rel: "preload", href: asset_path('poppins-v20-latin-regular.woff2'), as: "font", type: "font/woff2", crossorigin: :anonymous }
 %link{ rel: "preload", href: asset_path('poppins-v20-latin-600.woff2'), as: "font", type: "font/woff2", crossorigin: :anonymous }
 
-/ Then stylesheet
+/ Then the main stylesheet
 = stylesheet_link_tag "website", "data-turbo-track": "reload"
 
 / Then other critical fonts
