Remove unnecessary module prefixes

--- a/app/views/challenges/external.html.haml
+++ b/app/views/challenges/external.html.haml
@@ -1,7 +1,7 @@
 - content_for :meta_title, "The #12in23 Challenge"
 - content_for :meta_description, "Try out 12 different programming langauges during 2023. Broaden your horizons and level up your programming skills as your explore the varied paradigms and ideas that different languages embrace. It's free, fun, and useful!".html_safe
 - content_for :meta_image, "https://i.ytimg.com/vi/Svzev-9shKs/hqdefault.jpg"
-- content_for :canonical_url, Exercism::Routes.challenge_url('12in23')
+- content_for :canonical_url, challenge_url('12in23')
 
 
 #challenge-external-page
