--- a/app/views/contributing/contributors/index.html.haml
+++ b/app/views/contributing/contributors/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.contributing_contributors_url
+- content_for :canonical_url, contributing_contributors_url
 #contributing-contributors
   = render ViewComponents::Contributing::Header.new(:contributors)
 
