--- a/app/views/docs/index.html.haml
+++ b/app/views/docs/index.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta_title, "Exercism's Docs".html_safe
 - content_for :meta_description, "Our docs on how to use and contribute to Exercism. All your Exercism-related questions should be answered here."
-- content_for :canonical_url, Exercism::Routes.docs_url
+- content_for :canonical_url, docs_url
 
 = render ViewComponents::DocsMainNav.new
 
