--- a/app/views/docs/show.html.haml
+++ b/app/views/docs/show.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta_title, "#{@doc.title} | Exercism's Docs".html_safe
 - content_for :meta_description, @doc.blurb.presence || strip_tags(@doc.content_html).truncate(150)
-- content_for :canonical_url, Exercism::Routes.docs_section_url(@section)
+- content_for :canonical_url, docs_section_url(@section)
 
 = render ViewComponents::DocsMainNav.new(@section)
 
