--- a/app/views/insiders/external.html.haml
+++ b/app/views/insiders/external.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.insiders_url
+- content_for :canonical_url, insiders_url
 #page-insiders
   .gradient-container.pt-20.md:pt-40.pb-32
     .lg-container
