--- a/app/views/mentoring/external/show.html.haml
+++ b/app/views/mentoring/external/show.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.mentoring_url
+- content_for :canonical_url, mentoring_url
 #mentor-external-page
   %section.top-section
     .lg-container.c-shapes
