--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.tracks_url
+- content_for :canonical_url, tracks_url
 
 #page-tracks
   %header.tracks-header
