--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -1,6 +1,6 @@
 - content_for :meta_title, "About Exercism"
 - content_for :meta_description, "Learn about Exercism: our vision, mission, and strategy."
-- content_for :canonical_url, Exercism::Routes.about_url
+- content_for :canonical_url, about_url
 
 = render ViewComponents::AboutNav.new
 
