--- a/app/views/community/brief_introductions/index.html.haml
+++ b/app/views/community/brief_introductions/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.community_brief_introductions_url
+- content_for :canonical_url, community_brief_introductions_url
 #page-community
   %header
   .lg-container.relative
