--- a/app/views/community/interviews/index.html.haml
+++ b/app/views/community/interviews/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.community_interviews_url
+- content_for :canonical_url, community_interviews_url
 #page-community
   %header
   .lg-container.relative
