--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.community_url
+- content_for :canonical_url, community_url
 #page-community
   %header
   .lg-container.mt-40.relative
