--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :canonical_url, Exercism::Routes.donate_url
+- content_for :canonical_url, donate_url
 #page-donate
   - link_class = "underline hover:text-prominentLinkColor"
   %header.pt-24.pd:mt-40.md:shadow-lgZ1
