--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,7 +1,42 @@
-= render "layouts/font_loading"
+/ Fallback fonts first
+%link{ rel: "preload", href: asset_path('poppins-v20-latin-regular.woff2'), as: "font", type: "font/woff2", crossorigin: :anonymous }
+%link{ rel: "preload", href: asset_path('poppins-v20-latin-600.woff2'), as: "font", type: "font/woff2", crossorigin: :anonymous }
 
-/ We always want this rendered at the start.
+/ Then the main stylesheet
 = stylesheet_link_tag "website", "data-turbo-track": "reload"
+
+/ Then other critical fonts
+%link{ rel: "preload", href: asset_path('poppins-v20-latin-500.woff2'), as: "font", type: "font/woff2", crossorigin: :anonymous }
+%link{ rel: "preload", href: asset_path('poppins-v20-latin-700.woff2'), as: "font", type: "font/woff2", crossorigin: :anonymous }
+%link{ rel: "preload", href: asset_path('source-code-pro-v22-latin_latin-ext-regular.woff2'), as: "font", type: "font/woff2", crossorigin: :anonymous }
+
+/ Next, setup the fallback font
+:css
+  @font-face {
+    font-display: fallback;
+    font-family: PoppinsInitial;
+    font-weight: 400;
+    src: url(#{asset_path('poppins-v20-latin-regular.woff2')}) format('woff2');
+  }
+
+/ Use the 600 font-weight for 500/600/700
+- [500, 600, 700].each do |weight|
+  :css
+    @font-face {
+      font-display: fallback;
+      font-family: PoppinsInitial;
+      font-weight: #{weight};
+      src: url(#{asset_path('poppins-v20-latin-600.woff2')}) format('woff2');
+    }
+
+:css
+  body {
+    --body-font: Poppins, PoppinsInitial, serif;
+    font-family: var(--body-font);
+    -webkit-font-smoothing: antialiased;
+  }
+
+/ Then handle JavaScript and remaining assets
 
 - if landing_page?
   = javascript_include_tag('landing', type: :module, crossorigin: :anonymous, 'data-turbo-track': 'reload', 'data-turbo-eval': false, defer: true)
