Add canonical urls (#6095)
* Add canonical url

* Remove whitespace

* Hardcode landing page

* Add canonical url for Impact page

* Add canonical url for docs pages

* Add canonical url for about pages

* Add canonical url for track pages

* Add canonical url for blog pages

* Add canonical url for /perks

* Add canonical url for 12in23 challenge

* Add canonical url for community pages

* Add canonical url for insiders

* Add canonical url for contributing pages

* Add canonical url for donate

* Add canonical url for mentoring

* Update app/views/layouts/_meta_tags.html.haml

* Remove unnecessary module prefixes

* Fix published solution URL

---------

Co-authored-by: dem4ron <demaaron88@gmail.com>
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/app/views/about/hiring.html.haml
+++ b/app/views/about/hiring.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta_title, "Exercism's Hiring!".html_safe
 - content_for :meta_description, "Come and join a passionate team making programming education fun and effective. Here are some of the roles we’re hiring for.".html_safe
+- content_for :canonical_url, hiring_about_url
 
 = render ViewComponents::AboutNav.new(:hiring)
 
