--- a/app/views/community/videos/index.html.haml
+++ b/app/views/community/videos/index.html.haml
@@ -1,3 +1,4 @@
+- content_for :canonical_url, community_videos_url
 #page-community-videos
   .lg-container
     .flex.pt-32.xl:gap-64.lg:gap-32.gap-64.lg:flex-row.flex-col
