--- a/app/views/contributing/dashboard/show.html.haml
+++ b/app/views/contributing/dashboard/show.html.haml
@@ -1,3 +1,4 @@
+- content_for :canonical_url, contributing_root_url
 #contributing-dashboard
   = render ViewComponents::Contributing::Header.new(:dashboard)
 
