--- a/app/views/contributing/tasks/index.html.haml
+++ b/app/views/contributing/tasks/index.html.haml
@@ -1,3 +1,4 @@
+- content_for :canonical_url, contributing_tasks_url
 #contributing-tasks
   = render ViewComponents::Contributing::Header.new(:tasks)
 
