--- a/app/views/about/individual_supporters.html.haml
+++ b/app/views/about/individual_supporters.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta_title, "Supporting Exercism"
 - content_for :meta_description, "These wonderful people have helped financially support Exercism"
+- content_for :canonical_url, individual_supporters_about_url
 
 = render ViewComponents::AboutNav.new(:individual_supporters)
 
