--- a/app/views/about/partners/index.html.haml
+++ b/app/views/about/partners/index.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta_title, "Supporting Exercism"
 - content_for :meta_description, "Can your organisation help Exercism grow? Become rocket fuel for our mission!"
+- content_for :canonical_url, about_partners_url
 
 = render ViewComponents::AboutNav.new(:organisation_supporters)
 
