--- a/app/views/docs/tracks.html.haml
+++ b/app/views/docs/tracks.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta_title, "Exercism's Track Docs".html_safe
 - content_for :meta_description, "Track specific docs on how to use that language alongside Exercism"
+- content_for :canonical_url, docs_tracks_url
 
 = render ViewComponents::DocsMainNav.new(:tracks)
 
