--- a/app/views/mailers/notifications_mailer/onboarding_product.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_product.html.haml
@@ -1,7 +1,7 @@
 %p Hey there,
 
 %p
-  It's been a day or so since you signed up to #{link_to 'Exercism', 'https://exercism.org'}, and I wanted to see how you're getting on so far?
+  It's been a day or so since you signed up to #{link_to 'Exercism', 'https://exercism.org'}, and I wanted to check how you're getting on so far?
 %p
   Sometimes Exercism can be a bit overwhelming at first. Some people get a bit lost and things don't quite make sense to them.
   If you get stuck, check out our #{link_to 'Discord', 'https://exercism.org/r/discord'} or #{link_to 'Forum', 'https://exercism.org/r/forum'}, where you can ask for help.
