Apply suggestions from code review
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/app/views/mailers/notifications_mailer/onboarding_insiders.text.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_insiders.text.haml
@@ -1,8 +1,8 @@
 Hey there,
 \
-I hope you're enjoying Exercism so far!  Did you know that we're a not-for-profit organisation?  We want everyone to be able to benefit from Exercism, no matter how much money they have, so we keep the site 100% free.
+I hope you're enjoying Exercism so far! Did you know that we're a not-for-profit organisation?  We want everyone to be able to benefit from Exercism, no matter how much money they have, so we keep the site 100% free.
 \
-We rely on donations those that can afford it to keep Exercism running.
+To do that, we rely on donations of those that can afford it to keep Exercism running.
 We're an extremely lean operation and considering we serve over 1.5 million people, we have very low costs (~$250k/year).
 I put a video together that explains more: https://exercism.org/insiders
 \
@@ -18,4 +18,4 @@ We look forward to seeing all the amazing things you will achieve with Exercism.
 Best regards,
 \
 Jeremy Walker
-Exercism Co-founder &amp; CEO
+Exercism Co-founder & CEO
