--- a/app/views/mailers/notifications_mailer/onboarding_product.text.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_product.text.haml
@@ -14,8 +14,4 @@ And as a final a reminder, Exercism is 100% free, open-source and not for profit
 Best regards,
 \
 Jeremy Walker
-Exercism Co-founder &amp; CEO
-
-
-
-
+Exercism Co-founder & CEO
