--- a/app/views/mailers/notifications_mailer/onboarding_community.text.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_community.text.haml
@@ -2,7 +2,7 @@ Hello there!
 \
 I hope you're enjoying your first few days on Exercism. As you continue to explore our platform, I wanted to take a moment to tell you about our amazing community.
 \
-Exercism is an open-source, community-powered project. In fact we're one of the biggest Open Source organisations on GitHub with over 350 repositories. Our community is centered around our values of empathy, kindness, and inclusivity.
+Exercism is an open-source, community-powered project. In fact we're one of the biggest open-source organisations on GitHub with over 350 repositories. Our community is centered around our values of empathy, kindness, and inclusivity.
 \
 Check out this video or read more below: https://www.youtube.com/watch?v=fSh-nGw3IP8
 \
@@ -17,4 +17,4 @@ We would love for you to join in and become an active member of our community. W
 Best regards,
 \
 Jeremy Walker
-Exercism Co-founder &amp; CEO
+Exercism Co-founder & CEO
