Apply suggestions from code review

--- a/app/views/mailers/notifications_mailer/onboarding_community.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_community.html.haml
@@ -6,7 +6,7 @@
 
 %p
   Exercism is an open-source, community-powered project.
-  In fact we're one of the biggest Open Source organisations on #{link_to 'GitHub', 'https://github.com/exercism/'} with over 350 repositories.
+  In fact we're one of the biggest open-source organisations on #{link_to 'GitHub', 'https://github.com/exercism/'} with over 350 repositories.
   Our community is centered around our values of empathy, kindness, and inclusivity.
   Check out this video or read more below 👇
 
