--- a/app/views/mailers/notifications_mailer/onboarding_insiders.html.haml
+++ b/app/views/mailers/notifications_mailer/onboarding_insiders.html.haml
@@ -7,7 +7,7 @@
   We want everyone to be able to benefit from Exercism, no matter how much money they have, so we keep the site 100% free.
 
 %p
-  We rely on donations those that can afford it to keep Exercism running.
+  To do that, we rely on donations to keep Exercism running.
   We're an extremely lean operation and considering we serve over 1.5 million people, we have very low costs (~$250k/year).
   I put a video together that explains more 👇
 
