Remove representation role from images

--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -34,7 +34,7 @@
           = graphical_icon 'arrow-right'
 
       .hidden.lg:block.lg:ml-48.self-start.main-image-link
-        = image_tag main_post.image_url, alt: "", role: "presentation", class: 'rounded-8 w-100'
+        = image_tag main_post.image_url, alt: "", class: 'rounded-8 w-100'
 
     %h2.text-h3.mb-24.md:mb-40 More posts from the community
     .grid.gap-24.grid-cols-1.sm:grid-cols-2.md:grid-cols-3.lg:grid-cols-4
