--- a/app/views/dashboard/_mentoring_inbox.html.haml
+++ b/app/views/dashboard/_mentoring_inbox.html.haml
@@ -5,7 +5,7 @@
     %h3.text-h3 Mentoring
     .track-icons.ml-auto
       - track_icon_urls.each do |icon_url|
-        = image_tag icon_url, alt: '', role: :presentation, class: "c-icon c-track-icon"
+        = image_tag icon_url, alt: '', class: "c-icon c-track-icon"
 
 
   .discussions
