--- a/app/views/dashboard/_tracks_zero_section.html.haml
+++ b/app/views/dashboard/_tracks_zero_section.html.haml
@@ -5,7 +5,7 @@
 %section.c-tracks-zero-section.c-zero-section
   .track-icons
     - track_icon_urls.each do |icon_url|
-      = image_tag icon_url, alt: '', role: :presentation, class: "c-icon c-track-icon"
+      = image_tag icon_url, alt: '', class: "c-icon c-track-icon"
 
   %h3 You've not joined a track yet.
 
