--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -110,7 +110,7 @@
           %p.text-p-xlarge
             Discover new and exciting ways to approach an exercise by getting mentored on it. Become more familiar with the conventions, idioms and opinions of a particular programming language.
 
-      = srcset_tag "screenshots/mentoring.webp", [400, 500, 800, 1000, 1376, 2752], "100vw", role: :presentation, class: "main-graphic mb-60 shadow-lgZ1", width: 2752, height: 1796
+      = srcset_tag "screenshots/mentoring.webp", [400, 500, 800, 1000, 1376, 2752], "100vw", class: "main-graphic mb-60 shadow-lgZ1", width: 2752, height: 1796
 
       .flex.flex-col.items-center
         %h3.text-h2 Why mentoring?
