--- a/app/views/tracks/about/_key_features.html.haml
+++ b/app/views/tracks/about/_key_features.html.haml
@@ -11,6 +11,6 @@
       = track_icon(track)
       - track.key_features.first(6).each.with_index do |feature, idx|
         .feature{ class: "--#{idx}" }
-          = image_tag key_feature_icon_url(feature[:icon]), role: :presentation, alt: "", class: "c-icon"
+          = image_tag key_feature_icon_url(feature[:icon]), alt: "", class: "c-icon"
           %h3.text-h4.mb-8= feature[:title]
           %p.text-p-base.text-center= feature[:content]
