--- a/app/views/tracks/show/_summary_article.html.haml
+++ b/app/views/tracks/show/_summary_article.html.haml
@@ -93,7 +93,7 @@
         .flex.flex-col.gap-8.mb-20
           - forum_threads.each do |thread|
             = link_to thread.url, class: 'flex items-start bg-backgroundColorA px-16 py-12 shadow-base hover:shadow-smZ1 rounded-5 mb-8' do
-              = image_tag thread.poster_avatar_url, alt: "", role: :presentation, class: 'mr-8 h-[32px] w-[32px] rounded-circle'
+              = image_tag thread.poster_avatar_url, alt: "", class: 'mr-8 h-[32px] w-[32px] rounded-circle'
               .flex.flex-col.mr-auto
                 %h5.text-h6= thread.title
                 .text-textColor6.leading-150
