--- a/app/views/settings/integrations.html.haml
+++ b/app/views/settings/integrations.html.haml
@@ -34,14 +34,13 @@
           %p.text-16.leading-140.mb-16
             Your Exercism and Discord accounts are linked.
             You should receive the correct roles on Discord.
-            If you don't, please email #{link_to 'jeremy@exercism.org', 'mailto:jeremy@exercism.org'}.
-          = button_to disconnect_discord_api_integrations_path,
+            If you don't, please open an issue on #{link_to 'the forum', forum_redirect_url, class: 'text-linkColor font-semibold'}.
+          = button_to "Disconnect from Discord",
+            disconnect_discord_settings_path,
             form_class: "discord-btn",
-            class: "btn-enhanced btn-m !bg-discordBlue !text-white",
+            class: "btn-enhanced btn-m",
             method: :delete,
-            data: { turbo: false } do
-            = graphical_icon 'external-site-discord', css_class: '!filter-none'
-            %span Disconnect from Discord
+            data: { turbo: false }
         - else
           %p.text-16.leading-140.mb-16
             To be assigned the correct roles on Discord, please connect your Exercism and Discord accounts.
