--- a/app/css/components/site-header.css
+++ b/app/css/components/site-header.css
@@ -268,9 +268,6 @@ body.keyboard-navigation .nav-element:hover .arrow {
             @apply ml-8;
         }
     }
-    .auth-buttons + .c-react-wrapper-dropdowns-dropdown {
-        @apply min-w-[135px] lg:min-w-[0];
-    }
     & .auth-buttons a,
     & .explore-menu {
         height: 40px;
@@ -360,6 +357,14 @@ body.namespace-about {
 
         & .exercism-link {
             @apply mr-32;
+        }
+    }
+}
+
+body:not(.controller-pages.action-index) {
+    #site-header {
+        .auth-buttons + .c-react-wrapper-dropdowns-dropdown {
+            @apply min-w-[135px] lg:min-w-[0];
         }
     }
 }
