--- a/app/views/tracks/concepts/index.html.haml
+++ b/app/views/tracks/concepts/index.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta_title, "#{@track.title} key concepts on Exercism"
 - content_for :meta_description, "Learn and master #{@user_track.num_concepts} key concepts in #{@track.title} on Exercism."
+- content_for :canonical_url, track_concepts_url(@track)
 
 #page-concepts-index
   = render ViewComponents::Track::Header.new(@track, :concepts)
