--- a/app/views/profiles/solutions.html.haml
+++ b/app/views/profiles/solutions.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta_title, "#{sanitize(@user.handle)}'s solutions Exercism".html_safe
 - content_for :meta_description, "Explore #{sanitize(@user.handle)}'s solutions on Exercism, and see everything they've learnt.".html_safe
+- content_for :canonical_url, solutions_profile_url(@user, order: params[:order].presence, page: params[:page].to_i > 1 ? params[:page] : nil)
 
 #page-profile-solutions
   = render ViewComponents::Profile::Header.new(@user, @profile, :solutions)
