--- a/app/views/profiles/testimonials.html.haml
+++ b/app/views/profiles/testimonials.html.haml
@@ -1,5 +1,6 @@
 - content_for :meta_title, "#{sanitize(@user.handle)}'s testimonials on Exercism".html_safe
 - content_for :meta_description, "Explore the testimonails that students have left for #{@user.handle} on Exercism, and learn how wonderful they are!"
+- content_for :canonical_url, testimonials_profile_url(@user, page: params[:page].to_i > 1 ? params[:page] : nil)
 
 #page-profile-testimonials
   = render ViewComponents::Profile::Header.new(@user, @profile, :testimonials)
